Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignNumObjInteger.quorum
class Main
    action Main
        integer v = 5
        Test(v)
    end

    action Test(Number var)
        if var:GetValue() = 5.0
            output "passed"
        end
    end
end
