Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntObjIntegerField.quorum
class Main
    integer v = 5
    action Main
        Test(v)
    end

    action Test(Integer var)
    end
end
